[gd_scene load_steps=3 format=3 uid="uid://bjtev0dw6ettm"]

[ext_resource type="Script" path="res://Lobby.gd" id="1_4xktl"]
[ext_resource type="Theme" uid="uid://13hqji670cr3" path="res://default_theme.tres" id="1_i0tt1"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_4xktl")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
theme = ExtResource("1_i0tt1")
color = Color(0.698039, 1, 1, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2

[node name="PlayerInfoLabel" type="Label" parent="ColorRect/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Player Name:
Player Id:"
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="LobbyTitleLabel" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "You are in:"

[node name="PlayerList" type="VBoxContainer" parent="ColorRect/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BackButton" type="Button" parent="ColorRect"]
layout_mode = 2
offset_left = 50.0
offset_top = 50.0
offset_right = 60.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 32
text = "Back"

[node name="PlayButton" type="Button" parent="ColorRect"]
offset_left = 984.0
offset_top = 552.0
offset_right = 1104.0
offset_bottom = 612.0
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="ColorRect/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ColorRect/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
